--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,6 @@
     border: 2px solid red;
     height: 600px;
 }
-
 h1 {
     font-size: 60px;
 }
@@ -51,7 +50,8 @@ nav {
     font-size: 40px;
     margin:20px;
 }
-#subUp {
+#subUp,
+#restart {
      background-color: aqua;
      font-size: 30px;
 }
